# KuiperInfer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  b.txt  bench.txt  dockerfile  test.cu  vcpkg.json
.github/workflows/: cmake-windows.yml  cmake.yml
bench/: CMakeLists.txt  bench_conv.cpp  bench_conv_simple.cpp  bench_copy.cpp  bench_exp.cpp  bench_identity_block.cpp  bench_layer.cpp  bench_main.cpp  bench_matrix.cpp  bench_mobilenet.cpp  bench_net.cpp  bench_quant.cpp  bench_relu.cpp  bench_reshape.cpp  bench_resnet.cpp  bench_rmsnorm.cpp  bench_silu.cpp  bench_simd.cpp  bench_unet.cpp  bench_view.cpp  bench_winograd.cpp  bench_yolo.cpp
demos/: CMakeLists.txt  image_util.cpp  image_util.hpp  main.cpp  resnet_test.cpp  unet_test.cpp  yolo_test.cpp
demos/llama2/: CMakeLists.txt  llama_chat.cpp  llama_chat.hpp  main.cpp
demos/mobilenet/: CMakeLists.txt  mobile.cpp
demos/resnet/: CMakeLists.txt  resnet_test.cpp
demos/unet/: CMakeLists.txt  unet_test.cpp
demos/yolo/: CMakeLists.txt  yolo_test.cpp
include/: common.hpp  layer.hpp  status_code.hpp  tick.hpp
include/data/: fast_copy.hpp  im2col.hpp  load_data.hpp  tensor.hpp  tensor_nd.hpp  tensor_util.hpp
include/json/nlohmann/: adl_serializer.hpp  byte_container_with_subtype.hpp  json.hpp  json_fwd.hpp
include/layer/abstract/: layer.hpp  layer_factory.hpp  non_param_layer.hpp  param_layer.hpp
include/math/: armadillo
include/math/armadillo_bits/: Base_bones.hpp  CubeToMatOp_bones.hpp  Cube_bones.hpp  Cube_meat.hpp  GenCube_meat.hpp  Gen_meat.hpp  Glue_bones.hpp  MapMat_meat.hpp  Mat_meat.hpp  OpCube_bones.hpp  Op_bones.hpp  Proxy.hpp  SpMat_bones.hpp  SpMat_iterators_meat.hpp  SpMat_meat.hpp  SpOp_bones.hpp  SpRow_meat.hpp  SpSubview_bones.hpp  SpSubview_iterators_meat.hpp  SpSubview_meat.hpp  SpToDOp_bones.hpp  SpValProxy_meat.hpp  access.hpp  arma_forward.hpp  arma_rng.hpp  arma_version.hpp  auxlib_meat.hpp  band_helper.hpp  compiler_setup.hpp  config.hpp  config.hpp.cmake  constants.hpp  constants_old.hpp  debug.hpp  def_blas.hpp  def_lapack.hpp  diagmat_proxy.hpp  diagview_bones.hpp  diagview_meat.hpp  (+79 more)
include/parser/: ir.hpp  parse_expression.hpp  runtime_attr.hpp  runtime_ir.hpp  runtime_op.hpp  runtime_operand.hpp  runtime_parameter.hpp  storezip.hpp
include/runtime/: ir.h  runtime_attr.hpp  runtime_datatype.hpp  runtime_ir.hpp  runtime_op.hpp  runtime_operand.hpp  runtime_parameter.hpp  store_zip.hpp
include/shape/: shape.hpp
include/utils/: gpu_utils.cuh  time_logging.hpp
slides/: readme.md  第一节课件.md  第七节课件.md  第二节课件.md  第五节课程.md
source/: readme.txt
source/backend/cuda/: CMakeLists.txt
source/backend/cuda/src/: main.cpp
source/backend/cuda/src/cuda/: gemm.cu  im2col.cu  preprocess.cu
source/data/: blob.cpp  blob.hpp  fast_copy.cpp  im2col.cpp  load_data.cpp  tensor.cpp  tensor.hpp  tensor_utils.cpp  tensor_utils.cu
source/layer/: avgpooling.cpp  avgpooling.hpp  build_layer.cpp  build_layer.hpp  concat.cpp  concat.hpp  convolution.cpp  convolution.hpp  flatten.cpp  flatten.hpp  layer.cpp  layer.hpp  layer_factory.cpp  layer_factory.hpp  linear.cpp  linear.hpp  param_layer.cpp  param_layer.hpp  sigmoid.cpp  sigmoid.hpp  softmax.cpp  softmax.hpp
source/parser/: ir.cpp  parse_expression.cpp  runtime_attr.cpp  runtime_ir.cpp  runtime_op.cpp  store_zip.cpp  storezip.cpp
source/runtime/: ir.cpp  runtime_attr.cpp  runtime_ir.cpp  runtime_op.cpp  store_zip.cpp
source/shape/: shape.cpp
source/utils/: gpu_utils.cu  time_logging.cpp
test/: CMakeLists.txt  test_attr.cpp  test_average_pooling.cpp  test_batchnorm.cpp  test_blob.cpp  test_cat.cpp  test_conv.cpp  test_conv3x3.cpp  test_copy.cpp  test_expression.cpp  test_flatten.cpp  test_hardswish.cpp  test_im2col.cpp  test_ir.cpp  test_json.cpp  test_layer.cpp  test_layer_factory.cpp  test_linear.cpp  test_load_data.cpp  test_main.cpp  test_maxpooling.cpp  test_net.cpp  test_pooling.cpp  test_relu.cpp  test_reshape.cpp  test_runtime_ir.cpp  test_sigmoid.cpp  test_silu.cpp  test_softmax.cpp  test_tensor.cpp  test_upsample.cpp  test_view.cpp  test_yolo.cpp
test/test_data/: test_load_data.cpp  test_tensor.cpp  test_tensor_md.cpp  test_tensor_nd.cpp  test_utensor.cpp
test/test_layer/: test_adaptive_avgpooling.cpp  test_average_pooling.cpp  test_batchnorm.cpp  test_cat.cpp  test_conv.cpp  test_deconv.cpp  test_expression.cpp  test_flatten.cpp  test_hardsigmoid.cpp  test_hardswish.cpp  test_layer.cpp  test_layer_factory.cpp  test_linear.cpp  test_matmul.cpp  test_maxpooling.cpp  test_param_layer.cpp  test_relu.cpp  test_reshape.cpp  test_sigmoid.cpp  test_silu.cpp  test_softmax.cpp  test_upsample.cpp  test_view.cpp
test/test_net/: test_classify_net.cpp  test_net.cpp  test_yolo.cpp
test/test_runtime/: test_attr.cpp  test_param.cpp  test_runtime_ir.cpp
tmp/: data1.csv  data2.csv  data3.csv  data5.csv
tmp/add/: 1.csv  3.csv  7.csv  resnet_add.pnnx.param  resnet_add2.pnnx.param  resnet_batchnorm_add.pnnx.param  resnet_batchnorm_add3.pnnx.param
tmp/batchnorm/: 1.csv  2.csv  3.csv  5.csv  resnet_batchnorm.pnnx.param  resnet_batchnorm2.pnnx.param  resnet_batchnorm_identity3.pnnx.param  resnet_batchnorm_sigmoid.pnnx.param
tmp/data_loader/: data4.csv  data6.csv
tmp/group_conv/: group_conv.pnnx.param
tmp/im2cols/: 1.csv  1_large.csv  2.csv  2_large.csv  3.csv  3_large.csv  conv1x1.pnnx.param  convlarge.pnnx.param  input.csv  kernel.csv
tmp/mobilenet/: 1.csv  2.csv  3.csv  mobile.pnnx.param  mobile_224.pnnx.param  mobile_batch8.pnnx.param
tmp/resnet/: 23.csv  resnet18_batch1.param  resnet18_batch16.pnnx.param
tmp/resnet_identity/: 1.csv  13.csv  17.csv  19.csv  2.csv  21.csv  22.csv  4.csv  7.csv  resnet_91_graph.pnnx.param  resnet_93_graph.pnnx.param  resnet_batchnorm_identity3.pnnx.param  resnet_batchnorm_identity5.pnnx.param  resnet_batchnorm_identity91.pnnx.param  resnet_identity_graph_big.pnnx.param  resnet_identity_graph_max.pnnx.param  resnet_identity_graph_test.pnnx.param
tmp/small_graph/: 1.csv  resnet_small_graph1.pnnx.param
tmp/small_graph_pool/: 1.csv  resnet_small_graph1.pnnx.param
(+140 files in other folders)
